<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.balaji_2_2_0_5.mvvmapp1.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:background="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view_logo"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/architect_your_app_with"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#465A61"
                    app:fontFamily="cursive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mvvm"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="#969EEE"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    app:fontFamily="casual" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:background="#ffffff"
                android:orientation="vertical"
                android:padding="18dp">
                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:drawableStart="@drawable/icaccount_box"
                    android:drawablePadding="16dp"
                    android:hint="@string/balaji_gmail_com"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:text="@={viewmodel.email}"/>

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:drawableStart="@drawable/iclock"
                    android:drawablePadding="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:text="@={viewmodel.password}"/>

                <TextView
                    android:id="@+id/text_view_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/forget_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:onClick="@{viewmodel::onLoginButtonClick}"/>

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
